--- a/home.html
+++ b/home.html
@@ -69,7 +69,7 @@
         <form class="col-12 col-lg-auto mb-2 mb-lg-0 me-lg-auto" role="search"> <input type="search"
             class="form-control" placeholder="Search..." aria-label="Search"> </form>
         <div class="text-end"> <a href="signup.html" class="btn btn-light text-dark me-2">Login</a>
-         <a href="/signup.html" type="button" class="btn btn-primary">Sign-up</a>
+         <a href="signup.html" type="button" class="btn btn-primary">Sign-up</a>
         </div>
       </div>
     </div>
@@ -87,13 +87,13 @@
     </div>
     <div class="carousel-inner">
       <div class="carousel-item active">
-        <img src="/image/trend front.webp" class="d-block w-100" alt="...">
+        <img src="image/trend front.webp" class="d-block w-100" alt="...">
       </div>
       <div class="carousel-item">
-        <img src="/image/trend1.webp" class="d-block w-100" alt="...">
+        <img src="image/trend1.webp" class="d-block w-100" alt="...">
       </div>
       <div class="carousel-item">
-        <img src="/image/trend2.webp" class="d-block w-100" alt="...">
+        <img src="image/trend2.webp" class="d-block w-100" alt="...">
       </div>
     </div>
     <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators"
