--- a/new.html
+++ b/new.html
@@ -55,7 +55,7 @@
                     <form class="col-12 col-lg-auto mb-2 mb-lg-0 me-lg-auto" role="search"> <input type="search"
                             class="form-control" placeholder="Search..." aria-label="Search"> </form>
                     <div class="text-end"> <a href="signup.html" class="btn btn-light text-dark me-2">Login</a>
-                       <a href="/signup.html" type="button" class="btn btn-primary">Sign-up</a>
+                       <a href="signup.html" type="button" class="btn btn-primary">Sign-up</a>
                 </div>
             </div>
         </header>
