--- a/contact.html
+++ b/contact.html
@@ -19,7 +19,7 @@
             <h1>TRendy</h1>
           </a>
           <ul class="nav col-12 col-lg-auto my-2 justify-content-center my-md-0 text-small">
-            <li> <a href="home.html" class="nav-link text-light text-center">
+            <li> <a href="index.html" class="nav-link text-light text-center">
                 <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" class="bi bi-house"
                   viewBox="0 0 16 16">
                   <path
